# sqlitenow-kmp

./: .gitignore  AGENTS.md  DEVELOPMENT.md  HOW_TO_PUBLISH.md  INTROSPECTION.md  Package.swift  README.md  build.gradle.kts  dev-rebuild.sh  drymint.toml  gradle.properties  identifier.sqlite  rebuild-native.sh  release.sh  settings.gradle.kts  wasmjs-plan.md
.github/workflows/: gradle.yml  pages.yml  publish-dart-cli.yml  publish-dart-oversqlite.yml  publish-dart-runtime.yml  publish.yml
.sqlitenow/: release-distribution.json
dart/: .gitignore  README.md  pubspec.yaml
dart/scripts/: oversqlite_realserver_all.sh  oversqlite_realserver_all_heavy.sh  oversqlite_snapshot_memory.sh
docs/: README.md  _config.yml  documentation.md  getting-started.md  index.html  index.markdown  overview.md  recipes.md  run-local.sh  sync.md  tutorials.md
docs-engineering/: kmp_dart_release_confidence.md  oversqlite_flow.md  oversqlite_test.md  sqlitenow_core_test.md  sqlitenow_flow.md  swift_support.md
drymint/: policy.yaml  triage.yaml
gradle/: gradle-daemon-jvm.properties  libs.versions.toml  swift-runtime-artifact-packaging.gradle.kts  swiftpm-plugin-release.gradle.kts
library-core/: build.gradle.kts
library-core-test/: .gitignore
library-oversqlite/: build.gradle.kts
library-oversqlite-test/: README.md  REAL_SERVER_E2E_TRACKER.md
native-src/: .gitignore  CMakeLists.txt  run_tests.sh  test_nowsession.c
native-src/android/: build-session-extension.sh
native-src/ios/: build-session-extension.sh
native-src/session/: nowsession_extension.c  setup-sqlite-session.sh
oversqlite-contracts/: README.md
platform-core-test/: .gitignore
platform-oversqlite-test/: README.md  REAL_SERVER_E2E_TRACKER.md
scripts/: check-docs-local-links.py  kmp-dart-release-confidence.sh  stage-dart-cli-publish.sh  test-linux-arm64-on-mac.sh
specs/: core-oversqlite-module-split.md  oversqlite-destructive-detach-source-rotation.md  oversqlite-test-suite-reorganization.md  oversqlite-v1-pruning-and-source-recovery.md  oversqlite_client_perf_port.md  oversqlite_conflict_resolution_results.md  oversqlite_typed_payload_canonicalization.md  sqlitenow_flow.md
sqlitenow-compiler/: build.gradle  settings.gradle
sqlitenow-gradle-plugin/: build.gradle  gradle.properties  settings.gradle
(+1351 files in other folders)
